HW/HW1/results/lawsonserge_results.txt
Tester.java:8: error: cannot find symbol
		Point a = new Point(3.2,7);
		^
  symbol:   class Point
  location: class Tester
Tester.java:8: error: cannot find symbol
		Point a = new Point(3.2,7);
		              ^
  symbol:   class Point
  location: class Tester
Tester.java:9: error: cannot find symbol
		Point b = new Point(1,8.6);
		^
  symbol:   class Point
  location: class Tester
Tester.java:9: error: cannot find symbol
		Point b = new Point(1,8.6);
		              ^
  symbol:   class Point
  location: class Tester
Tester.java:11: error: cannot find symbol
		Segment seg = new Segment(a, b);
		^
  symbol:   class Segment
  location: class Tester
Tester.java:11: error: cannot find symbol
		Segment seg = new Segment(a, b);
		                  ^
  symbol:   class Segment
  location: class Tester
6 errors
